service.yaml
#service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: argo-demo
spec:
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
