ingress.yaml
#ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: argo-demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: nginx-demo.fol3y.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
